...
            "value": "Settings…"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Настройки…"
          }
        }
      }
    },
    "Quit": {
      "extractionState": "manual",
...
            "value": "Running"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Работает"
          }
        }
      }
    },
    "Paused until resumed": {
      "extractionState": "manual",
...
            "value": "Paused until resumed"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Пауза до включения"
          }
        }
      }
    },
    "Pause": {
      "extractionState": "manual",
...
            "value": "Top right"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Сверху справа"
          }
        }
      }
    },
    "Left": {
      "extractionState": "manual",
...
            "value": "Centre"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "В центре"
          }
        }
      }
    },
    "Right": {
      "extractionState": "manual",
...
